--- a/.github/workflows/new_acrh17.yml
+++ b/.github/workflows/new_acrh17.yml
@@ -7,7 +7,7 @@
 # https://github.com/P3TERX/Actions-OpenWrt
 # Description: Build OpenWrt using GitHub Actions
 #
-name:  ASUS-ACRH17
+name:  new_acrh17
 
 on:
   repository_dispatch:
